--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "@angular/platform-server": "^18.2.12",
     "@angular/router": "^18.2.12",
     "@angular/ssr": "^18.2.12",
+    "@stripe/stripe-js": "^4.8.0",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.3",
+    "canvas-confetti": "^1.9.3",
+    "ngx-bootstrap": "^18.1.3",
     "rxjs": "^7.8.1",
+    "three": "^0.177.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
