--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "ng build --configuration production",
-    "build:ssr": "ng build --configuration production && npm run build:server",
+    "build:ssr": "NODE_OPTIONS='--max-old-space-size=4096' ng build --configuration production && npm run build:server",
     "build:server": "ng build --configuration production --ssr",
     "build:backend": "cd src/backend && npm install && npm run build",
     "serve:ssr": "node dist/tienda-web-loto-ai/server/server.mjs",
