--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build:ssr": "NODE_OPTIONS='--max-old-space-size=4096' ng build --configuration production && npm run build:server",
     "build:server": "ng build --configuration production --ssr",
     "build:backend": "cd src/backend && npm install && npm run build",
-    "serve:ssr": "node dist/tienda-web-loto-ai/server/server.mjs",
+    "serve:ssr": "node dist/tienda-web-loto-ai/server/main.server.mjs",
     "start": "ng serve",
     "start:prod": "npm run serve:ssr",
     "deploy:frontend": "bash scripts/deploy-frontend.sh"
