--- a/.github/workflows/deploy-modified.yml
+++ b/.github/workflows/deploy-modified.yml
@@ -190,13 +190,7 @@ jobs:
             echo "1. Deteniendo procesos actuales..."
             $PM2_PATH stop all || true
             $PM2_PATH delete all || true
-            # Detener procesos Node.js de forma segura
-            PIDS=$(pgrep -f "main.server.mjs" || echo "")
-            if [ -n "$PIDS" ]; then
-              kill -TERM $PIDS || true
-              sleep 2
-              kill -KILL $PIDS 2>/dev/null || true
-            fi
+            echo "PM2 gestionará todos los procesos - no se requiere terminación manual"
 
             echo "2. Restaurando desde backup..."
             cd /var/www
@@ -227,17 +221,13 @@ jobs:
           $PM2_PATH stop all || echo "No hay procesos PM2 para detener"
           echo "Eliminando procesos PM2..."
           $PM2_PATH delete all || echo "No hay procesos PM2 para eliminar"
-          echo "Deteniendo procesos Node.js restantes..."
-          # Buscar procesos específicos antes de terminarlos
+          echo "Verificando procesos Node.js restantes..."
+          # Solo listar para información, NO terminar procesos manualmente
           PIDS=$(pgrep -f "main.server.mjs" || echo "")
           if [ -n "$PIDS" ]; then
-            echo "Procesos encontrados: $PIDS"
-            kill -TERM $PIDS || echo "No se pudieron terminar algunos procesos"
-            sleep 2
-            # Forzar si aún están corriendo
-            kill -KILL $PIDS 2>/dev/null || echo "Procesos ya terminados"
+            echo "Procesos Node.js encontrados (serán gestionados por PM2): $PIDS"
           else
-            echo "No hay procesos Node.js específicos para detener"
+            echo "No hay procesos Node.js específicos ejecutándose"
           fi
           echo "Esperando limpieza de procesos..."
           sleep 3
