--- a/nginx.conf
+++ b/nginx.conf
@@ -8,44 +8,38 @@ server {
 
 server {
     listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name loto-ia.com www.loto-ia.com;
+    ssl_certificate /etc/letsencrypt/live/loto-ia.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/loto-ia.com/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    merge_slashes off;
+    absolute_redirect off;
     
-    # SSL Configuration (update paths to your SSL certificates)
-    # ssl_certificate /path/to/your/certificate.crt;
-    # ssl_certificate_key /path/to/your/private.key;
-    
-    # Security headers
-    add_header X-Frame-Options DENY;
-    add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block";
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_proxied expired no-cache no-store private must-revalidate no_last_modified no_etag auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript;
-    
-    # Root directory donde está tu aplicación Angular
+    # Ajustes para HTTP/2
+    http2_max_field_size 16k;
+    http2_max_header_size 32k;
+    http2_idle_timeout 5m;
+    client_max_body_size 20M;
+                                 
+    # Ruta a los archivos estáticos
     root /var/www/tienda-web-lotoAI-1/dist/tienda-web-loto-ai/browser;
-    index index.html;
+    index index.csr.html;
+    access_log /var/log/nginx/loto-ia.access.log;
+    error_log /var/log/nginx/loto-ia.error.log debug;
     
-    # Serve static files
-    location ~ ^/(assets|favicon\.ico) {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+    # Configuración para archivos estáticos
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        root /var/www/tienda-web-lotoAI-1/dist/tienda-web-loto-ai/browser;
+        expires 0;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+        add_header Vary "Accept-Encoding, User-Agent";
         try_files $uri =404;
     }
     
-    # Serve JavaScript and CSS files
-    location ~* \.(js|css)$ {
-        expires 1y;
-        add_header Cache-Control "public";
-        try_files $uri =404;
-    }
-    
-    # Proxy requests to Node.js SSR server
     location / {
         proxy_pass http://localhost:4000;
         proxy_http_version 1.1;
@@ -56,20 +50,57 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # Añade estos timeouts y configuraciones de buffer
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
         proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+        
+        # Headers para dispositivos móviles
+        add_header X-UA-Compatible "IE=edge";
+        add_header X-Content-Type-Options "nosniff";
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header Vary "Accept-Encoding, User-Agent";
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        
+        # Headers de seguridad adicionales
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     }
     
-    # Fallback for Angular routes (if SSR fails)
-    location @fallback {
-        try_files $uri $uri/ /index.html;
+    location /api {
+        proxy_pass http://localhost:3001/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+   }
+    
+    # Bloquear acceso a archivos sensibles (añadir para mayor seguridad)
+    location ~ \.env$ {
+        deny all;
+        return 404;
     }
     
-    # Error pages
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
-    
+    # Páginas de error
+    error_page 404 /index.csr.html;
+    error_page 502 503 504 /50x.html;
     location = /50x.html {
-        root /var/www/html;
+        root /usr/share/nginx/html;
+    }
+    
+    # Configuración adicional para mejorar la seguridad
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
     }
 } 
