--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "build": "ng build --configuration production",
-    "build:ssr": "NODE_OPTIONS='--max-old-space-size=4096' ng build --configuration production && npm run build:server",
+    "build:ssr": "cmd /c \"ng build --configuration production && ng build --configuration production --ssr && node fix-build.js\"",
     "build:server": "ng build --configuration production --ssr",
-    "build:backend": "cd src/backend && npm install && npm run build",
+    "build:backend": "cmd /c \"cd src/backend && npm install && npm run build\"",
     "serve:ssr": "node dist/tienda-web-loto-ai/server/main.server.mjs",
+    "serve:express": "node express-server.js",
     "start": "ng serve",
     "start:prod": "npm run serve:ssr",
     "deploy:frontend": "bash scripts/deploy-frontend.sh"
@@ -26,6 +27,9 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.3",
     "canvas-confetti": "^1.9.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "ngx-bootstrap": "^18.1.3",
     "rxjs": "^7.8.1",
     "three": "^0.177.0",
@@ -37,6 +41,8 @@
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.12",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.19.64",
     "@types/three": "^0.177.0",
