Fix: Corregir dependencias backend y agregar instalación PM2 - Node 18 compatible

--- a/.github/workflows/deploy-modified.yml
+++ b/.github/workflows/deploy-modified.yml
@@ -38,6 +38,10 @@ jobs:
           export NODE_ENV=production
           export PATH=$PATH:/usr/local/bin:/usr/bin
           
+          echo "=== Instalando herramientas globales ==="
+          npm install -g pm2@latest
+          echo "✅ PM2 instalado globalmente"
+          
           echo "=== Navegando al directorio del proyecto ==="
           cd /var/www/tienda-web-lotoAI-1
           
