fix: Final build error resolution

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,11 @@
             "ssr": {
               "entry": "server.ts"
             },
+            "externalDependencies": [
+              "mock-aws-s3",
+              "aws-sdk",
+              "nock"
+            ],
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
