--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.19.64",
+    "@types/node-fetch": "^2.6.12",
     "@types/three": "^0.177.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
