--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,7 +4,8 @@
     "outDir": "./out-tsc/server",
     "types": [
       "node"
-    ]
+    ],
+    "skipLibCheck": true
   },
   "include": [
     "server.ts",
