--- a/package.json
+++ b/package.json
@@ -34,18 +34,26 @@
     "rxjs": "^7.8.1",
     "three": "^0.177.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.2",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "node-mailjet": "^6.0.5",
+    "pg": "^8.12.0",
+    "stripe": "^17.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.12",
+    "@types/bcrypt": "^5.0.2",
     "@types/canvas-confetti": "^1.9.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^18.19.64",
     "@types/node-fetch": "^2.6.12",
+    "@types/pg": "^8.11.6",
     "@types/three": "^0.177.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
