--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              { "glob": "favicon.ico", "input": "src/assets", "output": "/" },
               "src/assets"
             ],
             "styles": [
