Fix: Corregir ruta Mi Perfil, mover botón Cerrar Sesión al perfil y restaurar nombre usuario

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,10 +29,20 @@ server {
     access_log /var/log/nginx/loto-ia.access.log;
     error_log /var/log/nginx/loto-ia.error.log debug;
     
-    # Configuración para archivos estáticos
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # Configuración para archivos JSON (sin caché para datos dinámicos)
+    location ~* \.json$ {
         expires 0;
         add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+        add_header Vary "Accept-Encoding, User-Agent";
+        try_files $uri =404;
+    }
+    
+    # Configuración para archivos estáticos
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1h;
+        add_header Cache-Control "public, no-transform";
         add_header Pragma "no-cache";
         add_header Expires "0";
         add_header Vary "Accept-Encoding, User-Agent";
