Fix: Corregir nginx.conf para resolver errores 403 en API y rutas frontend

--- a/nginx.conf
+++ b/nginx.conf
@@ -33,15 +33,31 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Frontend routes - Corregido para SSR
+    # Frontend routes - Corregido para SSR y API
     location / {
-        try_files $uri $uri/index.html /index.csr.html;
+        try_files $uri $uri/ /index.csr.html;
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline' 'unsafe-eval'" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        
+        # Permitir todas las solicitudes OPTIONS para CORS
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+        
+        # Agregar CORS headers para otras solicitudes
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
     }
     
     # Bloquear acceso a archivos sensibles
