Fix: Restaurar configuración nginx que resolvió error 403

--- a/nginx.conf
+++ b/nginx.conf
@@ -31,23 +31,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
     }
 
-    # Frontend routes
+    # Frontend routes - Corregido para SSR
     location / {
-        try_files $uri $uri/ @fallback;
+        try_files $uri $uri/index.html /index.csr.html;
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    }
-    
-    location @fallback {
-        rewrite ^.*$ /index.csr.html last;
     }
     
     # Bloquear acceso a archivos sensibles
