Fix: Agregar configuracion nginx para evitar cache de archivos JSON - Resolver problema de botes desactualizados

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,14 @@ server {
     root /var/www/tienda-web-lotoAI-1/dist/tienda-web-loto-ai/browser;
     index index.csr.html;
     
+    # Configuración específica para archivos JSON (botes)
+    location ~* \.json$ {
+        expires -1;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+    }
+    
     # Configuración para archivos estáticos
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
